// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches previous snapshot:  1`] = `
<View
  style={
    [
      {
        "borderRadius": 16,
      },
      {
        "height": 155,
        "width": 155,
      },
      {
        "borderColor": "#1C1C1C",
        "borderWidth": 4,
        "padding": 5.5,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 11,
          "flex": 1,
          "justifyContent": "center",
        },
        {
          "backgroundColor": "#B6EEE5",
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#1C1C1C",
            "fontFamily": "TestFoundersGrotesk-Regular",
            "fontSize": 32,
          },
          {
            "paddingBottom": 2,
          },
        ]
      }
    >
      30
    </Text>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#1C1C1C",
            "fontFamily": "TestFoundersGrotesk-SemiBold",
            "fontSize": 16,
          },
          undefined,
        ]
      }
    >
      november
    </Text>
  </View>
</View>
`;

exports[`Matches previous snapshot:  2`] = `
<View
  style={
    [
      {
        "borderRadius": 16,
      },
      {
        "height": 96,
        "width": 96,
      },
      {
        "borderColor": "#1C1C1C",
        "borderWidth": 4,
        "padding": 2,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 11,
          "flex": 1,
          "justifyContent": "center",
        },
        {
          "backgroundColor": "#B6EEE5",
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#1C1C1C",
            "fontFamily": "TestFoundersGrotesk-Regular",
            "fontSize": 32,
          },
          {
            "paddingBottom": 2,
          },
        ]
      }
    >
      30
    </Text>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#1C1C1C",
            "fontFamily": "TestFoundersGrotesk-SemiBold",
            "fontSize": 16,
          },
          undefined,
        ]
      }
    >
      november
    </Text>
  </View>
</View>
`;

exports[`Matches previous snapshot:  3`] = `
<View
  style={
    [
      {
        "borderRadius": 16,
      },
      {
        "height": 155,
        "width": 155,
      },
      {
        "borderColor": "#D00000",
        "borderWidth": 4,
        "padding": 5.5,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 11,
          "flex": 1,
          "justifyContent": "center",
        },
        false,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#D00000",
            "fontFamily": "TestFoundersGrotesk-Regular",
            "fontSize": 32,
          },
          {
            "paddingBottom": 2,
          },
        ]
      }
    >
      30
    </Text>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#D00000",
            "fontFamily": "TestFoundersGrotesk-SemiBold",
            "fontSize": 16,
          },
          undefined,
        ]
      }
    >
      november
    </Text>
  </View>
</View>
`;

exports[`Matches previous snapshot:  4`] = `
<View
  style={
    [
      {
        "borderRadius": 16,
      },
      {
        "height": 96,
        "width": 96,
      },
      {
        "borderColor": "#D00000",
        "borderWidth": 4,
        "padding": 2,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 11,
          "flex": 1,
          "justifyContent": "center",
        },
        false,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#D00000",
            "fontFamily": "TestFoundersGrotesk-Regular",
            "fontSize": 32,
          },
          {
            "paddingBottom": 2,
          },
        ]
      }
    >
      30
    </Text>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#D00000",
            "fontFamily": "TestFoundersGrotesk-SemiBold",
            "fontSize": 16,
          },
          undefined,
        ]
      }
    >
      november
    </Text>
  </View>
</View>
`;
